<resources>
    <string name="app_name">MSGQ</string>
    <string name="URL_API">https://play.msgque.com</string>
    <string name="URL_DLR_MSGQUE">http://dlr.msgque.com</string>
    <string name="CLIENT_APP_ID">xclientid</string>
    <string name="CLIENT_SECRET">xclientsecret</string>
    <string name="token">9844717202abcd</string>
    <string name="number">Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="contact_sync">Contact Sync</string>
    <string name="numbers">Numbers</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="campaign">campaign</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="error_login">Error login try again latter.</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="company_details">Company Details</string>
    <string name="company_name">Company Name</string>
    <string name="company_number">Company Number</string>
    <string name="company_email_id">Company Email ID</string>
    <string name="company_address">Company Address</string>
    <string name="error_unable_to_save">Unable to save.</string>
    <string name="updating_with_dots">Updating...</string>
    <string name="save">Save</string>
    <string name="register_new_domain">Register New Domain</string>
    <string name="search">Search</string>
    <string name="dollar">$</string>
    <string name="total_amount">Total Amount</string>
    <string name="test_amount">₹0</string>
    <string name="next">Next</string>
    <string name="use_existing_domain">Use Exsisting Domain</string>
    <string name="pricing">PRICING</string>
    <string name="month">month</string>
    <string name="slash">/</string>
    <string name="skip">Skip</string>
    <string name="sender_id">Sender ID</string>
    <string name="zero_by_six">0/6</string>
    <string name="compose">Compose</string>
    <string name="logout">Logout</string>
    <string name="domain_name">Domain name</string>
    <string name="creating_with_dots">Creating...</string>
</resources>
