<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="routeAdapter"
            type="com.yog27ray.contactsync.adapter.RouteSpinnerAdapter"/>

        <variable
            name="senderIdAdapter"
            type="com.yog27ray.contactsync.adapter.SenderIdSpinnerAdapter"/>

        <variable
            name="sendSmsListener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="activity"
            type="com.yog27ray.contactsync.activity.SendSmsActivity"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adapter="@{routeAdapter}"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sender_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adapter="@{senderIdAdapter}"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numbers"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/message"
                android:minLines="5"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/campaign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/campaign"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{sendSmsListener}"
                android:text="@string/send"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.design.widget.CoordinatorLayout>
</layout>