<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.msgque.play.model.UserModel"/>
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/MenuWhiteTextTheme"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/Toolbar.SubTitleText"
            app:subtitleTextColor="@android:color/white"
            app:titleMarginStart="0dp"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/dp15"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15"
                android:paddingStart="@dimen/dp15">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp10"
                    android:text="@string/personal_details"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/large_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:text="@={user.name}"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/mobile_number"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={user.mobile}"
                    android:textSize="@dimen/normal_text"/>


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/mobile_number"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={user.email}"
                    android:textSize="@dimen/normal_text"/>


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="center"
                    android:padding="@dimen/dp10"
                    android:text="@string/company_details"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/large_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/company_name"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:text="@={user.companyName}"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/company_number"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={user.supportMobile}"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/company_email_id"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={user.supportEmail}"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/company_address"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/border_primary_dark"
                    android:gravity="start|top"
                    android:imeOptions="actionNext"
                    android:maxLines="5"
                    android:minLines="5"
                    android:text="@={user.companyAddress}"
                    android:textSize="@dimen/normal_text"/>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp10"
                    android:background="@drawable/button_sea_green"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingEnd="@dimen/dp20"
                    android:paddingLeft="@dimen/dp20"
                    android:paddingRight="@dimen/dp20"
                    android:paddingStart="@dimen/dp20"
                    android:text="@string/save"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v7.widget.LinearLayoutCompat>
</layout>