<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.msgque.play.activity.domain.SearchDomainActivity"/>
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/MenuWhiteTextTheme"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/Toolbar.SubTitleText"
            app:subtitleTextColor="@android:color/white"
            app:titleMarginStart="0dp"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/border_primary_dark"
            android:padding="@dimen/dp1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/normal_text"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:onClick="@{() -> activity.getDomains()}"
                android:padding="@dimen/dp5"
                app:srcCompat="@drawable/search"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:listitem="@layout/row_domain"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp30">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_amount"
                android:textAllCaps="true"
                android:textSize="@dimen/normal_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_amount"
                android:textAllCaps="true"
                android:textColor="@color/seaGreen"
                android:textSize="@dimen/xxx_large_text"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</layout>